--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,68 +1,69 @@
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #000000;
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #000000;
 }
 
 .carousel-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 50vh;
+  width: 50%;
 }
 
 button {
-    background-color: rgba(255, 255, 255);
-    cursor: pointer;
-    color: #000000;
-    height: auto;
-    border: none;
-    box-shadow: 0 0 20px 10px #ff0000;
+  background-color: rgba(255, 255, 255);
+  cursor: pointer;
+  color: #000000;
+  height: auto;
+  border: none;
+  box-shadow: 0 0 20px 10px #ff0000;
 }
 
 button:hover {
-    background-color: rgba(255, 0, 0, 0.7);
+  background-color: rgba(255, 0, 0, 0.7);
 }
 
 .carousel-image img {
-    width: 100%;
-    height: 100%;
+  width: 500px;
+  height: 150%;
 }
 
 .carousel-image {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .carousel-text {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    width: 40%;
-    height: 50%;
-    color: rgb(0, 0, 0);
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  width: 40%;
+  height: 50%;
+  color: rgb(0, 0, 0);
 }
 
 .title {
-    background-color: rgba(239, 37, 37, 0.65);
-    padding: 1px;
-    font-size: 48px;
-    border-radius: 5%;
-    font-weight: 800;
+  background-color: rgba(239, 37, 37, 0.65);
+  padding: 1px;
+  margin-top: 200px;
+  font-size: 48px;
+  border-radius: 5%;
+  font-weight: 800;
 }
 
 .subtitle {
-    background-color: rgba(239, 37, 37, 0.65);
-    padding: 5px;
-    font-weight: 600;
-    border-radius: 5%;
+  background-color: rgba(239, 37, 37, 0.65);
+  padding: 5px;
+  font-weight: 600;
+  border-radius: 5%;
 }
